--- a/LESS/index.less
+++ b/LESS/index.less
@@ -1,6 +1,6 @@
-@import "variables";
-@import "mixins";
-@import "header";
-@import "footer";
-@import "home-page";
-@import "about-page";
+@import "/LESS/variables.less";
+@import "/LESS/mixins.less";
+@import "../Header/header.less";
+@import "../Footer/footer.less";
+@import "../Home-Page/home-page.less";
+@import "../About-Page/about-page.less";
